--- a/index.html
+++ b/index.html
@@ -79,27 +79,27 @@
         <div class="box1" id="box">
             <div class="box-content">
             <h2>Clothes</h2>
-            <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('images/box1_image.jpg');"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box2" id="box">
             <div class="box-content">
             <h2>Health & Personal care</h2>
-            <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('images/box2_image.jpg');"></div>
             <p>See more</p>
             </div></div>
         <div class="box3" id="box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box3_image.jpg');"></div>
                 <p>See more</p>
                 </div>
         </div>
         <div class="box4" id="box">
             <div class="box-content">
                 <h2>Mobile</h2>
-                <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box4_image.jpg');"></div>
                 <p>See more</p>
                 </div>
         </div>
@@ -107,27 +107,27 @@
         <div class="box1" id="box">
             <div class="box-content">
             <h2>Beauty Picks</h2>
-            <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('images/box5_image.jpg');"></div>
             <p>See more</p>
             </div>
         </div>
         <div class="box2" id="box">
             <div class="box-content">
             <h2>Pets-care</h2>
-            <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+            <div class="box-img" style="background-image: url('images/box6_image.jpg');"></div>
             <p>See more</p>
             </div></div>
         <div class="box3" id="box">
             <div class="box-content">
                 <h2>New Arrival In Toy's</h2>
-                <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box7_image.jpg');"></div>
                 <p>See more</p>
                 </div>
         </div>
         <div class="box4" id="box">
             <div class="box-content">
                 <h2>Discover Trends In Fashion</h2>
-                <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('images/box8_image.jpg');"></div>
                 <p>See more</p>
                 </div>
         </div>
